<resources>
    <string name="app_name">BasicCalculator-Z</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="result">Result</string>
    <string name="result_shows_here">Result shows here</string>
    <string name="addition">Addition +</string>
    <string name="subtraction">Subtraction -</string>
    <string name="multiplication">Multiplication ×</string>
    <string name="division">Division ÷</string>
</resources>
